applications/showcase-website/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showcase-website
  labels:
    app: showcase-website
spec:
  selector:
    app: showcase-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
