applications/showcase-website/k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: showcase-website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - catdevops.net
    - www.catdevops.net
    secretName: catdevops-net-tls
  rules:
  - host: catdevops.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: showcase-website
            port:
              number: 80
  - host: www.catdevops.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: showcase-website
            port:
              number: 80
